# OOP2_project2

./: CMakeLists.txt
include/: CMakeLists.txt
resources/: CMakeLists.txt  arabic.txt  (+3 more)
src/: CMakeLists.txt
src/Application/: App.cpp  AppCleanupManager.cpp  AppContext.cpp  GameInitializer.cpp  GameLoop.cpp  WindowManager.cpp
src/Commands/: ChangeScreenCommand.cpp  EscapeKeyCommand.cpp  ExitGameCommand.cpp  SettingsCommandHandler.cpp
src/Core/: AudioManager.cpp  AudioSettingsManager.cpp  CMakeLists.txt  CommandInvoker.cpp  LanguageManager.cpp  MenuSoundManager.cpp  MultiFontManager.cpp  ScreenManager.cpp  SettingsResourceManager.cpp  UITheme.cpp
src/Game/: CMakeLists.txt
src/Game/Components/: Component.cpp
src/Game/Entities/: Ball.cpp  Entity.cpp
src/Game/World/: Map.cpp
src/Screens/: AboutScreen.cpp  GameplayScreen.cpp  HelpScreen.cpp  LoadingScreen.cpp  MainMenuScreen.cpp  MenuScreen.cpp  SettingsScreen.cpp
src/Services/: AudioService.cpp  InputService.cpp  Logger.cpp  PhysicsService.cpp  RandomService.cpp  ResourceLoader.cpp
src/Settings/: SettingsAutoSaveManager.cpp  SettingsCommandExecutor.cpp  SettingsEventLogger.cpp  SettingsInitializer.cpp  SettingsInputHandler.cpp
src/UI/: Button.cpp  ButtonFactory.cpp  ButtonInteraction.cpp  ButtonRenderer.cpp  Dropdown.cpp  HUD.cpp  HelpScreen.cpp  Label.cpp  LanguageControlPanel.cpp  Menu.cpp  MenuButtonObserver.cpp  MenuScreen.cpp  PauseScreen.cpp  SettingsEventHandler.cpp  SettingsScreen.cpp  SettingsUIFactory.cpp  SettingsUIRenderer.cpp  Slider.cpp  UIManager.cpp  VolumeControlPanel.cpp  Widget.cpp
(+77 files in other folders)
